test/errors/parsing/implicitModule.compopts
anotherModuleForTesting.chpl --main-module anotherModuleForTesting -o implicitModule
